# NS_solver

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
hdr/: abstractsolver.h  datawrite.h  datawriter.h  datawriter_fixed.h  grid.h  macropars.h
src/: abstractsolver.cpp  datawrite.cpp  datawriter_fixed.cpp  grid.cpp  macropars.cpp
